--- a/sobre/apoyo/sponsors.yml
+++ b/sobre/apoyo/sponsors.yml
@@ -7,3 +7,12 @@
     - name: R Consortium
       href: https://r-consortium.org
       thumbnail: https://www.r-consortium.org/wp-content/uploads/sites/13/2016/09/RConsortium_Horizontal_Pantone.png
+    - name: R Consortium
+      href: https://r-consortium.org
+      thumbnail: https://www.r-consortium.org/wp-content/uploads/sites/13/2016/09/RConsortium_Horizontal_Pantone.png
+    - name: R Consortium
+      href: https://r-consortium.org
+      thumbnail: https://www.r-consortium.org/wp-content/uploads/sites/13/2016/09/RConsortium_Horizontal_Pantone.png
+    - name: R Consortium
+      href: https://r-consortium.org
+      thumbnail: https://www.r-consortium.org/wp-content/uploads/sites/13/2016/09/RConsortium_Horizontal_Pantone.png
