--- a/_quarto-es.yml
+++ b/_quarto-es.yml
@@ -19,5 +19,6 @@ website:
           - href: sobre/equipo/index.qmd        
           - href: sobre/apoyo/index.qmd
           - href: sobre/cdc.qmd
-          
           - href: sobre/ediciones-anteriores.qmd  
+      - text: "Novedades"
+        href: blog/index.html          
