separate blog posts in diferent qmd files

--- a/_quarto-en.yml
+++ b/_quarto-en.yml
@@ -12,6 +12,9 @@ website:
         text: "**EN**"  
       - href: ../index.html
         text: "ES"    
+        
     right:
       - text: "Home"
         href: /index.html
+      - text: "News"
+        href: blog/en/index.html                 
