--- a/_quarto-es.yml
+++ b/_quarto-es.yml
@@ -25,6 +25,12 @@ website:
           - text: "Llamado a Presentación de Trabajos"
             href: blog/es/2023-04-24-presentacion-trabajos-2023.html
           - text: "Inscripción"
-            href: blog/es/2023-06-08-inscripcion.html            
+            href: https://www.eventbrite.cl/e/latinr-2023-conferencia-latinoamericana-sobre-uso-de-r-en-id-tickets-637517701607
+          - text: "Precios de Inscripción"
+            href: blog/es/2023-06-08-inscripcion.html  
+      - text: LatinR 2023
+        menu: 
+          - text: "Conferencias"
+            href: cronograma/conferencias.qmd
       - text: "Novedades"
         href: blog/es/index.html          
