--- a/sobre/apoyo/sponsors.yml
+++ b/sobre/apoyo/sponsors.yml
@@ -1,6 +1,9 @@
     - name: R Consortium
       href: https://r-consortium.org
       thumbnail: https://www.r-consortium.org/wp-content/uploads/sites/13/2016/09/RConsortium_Horizontal_Pantone.png
+    - name: Appsilon
+      href: https://appsilon.com/
+      thumbnail: ../../img/partners/Appsilon.svg     
     - name: Facultad de Ciencias Económicas y de Administración
       href: http://eva.fcea.edu.uy/
       thumbnail: ../../img/partners/FCEA.png
