--- a/_quarto-pt.yml
+++ b/_quarto-pt.yml
@@ -18,8 +18,8 @@ website:
         menu:        
           - href: sobre/equipo/equipe.qmd        
           - href: sobre/apoyo/apoio.qmd
-          # - href: sobre/cdc.qmd
-          # - href: sobre/ediciones-anteriores.qmd          
+          - href: sobre/coc/codigo-de-conduta.qmd
+          - href: sobre/ediciones-anteriores/edicoes-anteriores.qmd          
       - text: "Novidades"
         href: blog/pt/index.html                 
       
