--- a/_quarto-pt.yml
+++ b/_quarto-pt.yml
@@ -19,7 +19,11 @@ website:
           - href: sobre/equipo/equipe.qmd        
           - href: sobre/apoyo/apoio.qmd
           - href: sobre/coc/codigo-de-conduta.qmd
-          - href: sobre/ediciones-anteriores/edicoes-anteriores.qmd          
+          - href: sobre/ediciones-anteriores/edicoes-anteriores.qmd     
+      - text: LatinR 2023
+        menu: 
+          - text: "Palestras convidadas"
+            href: cronograma/conferencias/palestras-convidadas.qmd          
       - text: "Novidades"
         href: blog/pt/index.html                 
       
