--- a/_quarto-pt.yml
+++ b/_quarto-pt.yml
@@ -30,6 +30,8 @@ website:
             href: blog/pt/2023-06-08-inscriptionpt.html          
       - text: LatinR 2023
         menu: 
+          - text: "Localização"
+            href: cronograma/lugar/lugar-pt.qmd            
           - text: "Palestras convidadas"
             href: cronograma/conferencistas/palestras-convidadas.qmd    
           - text: "Workshops"
