--- a/_quarto-es.yml
+++ b/_quarto-es.yml
@@ -30,6 +30,8 @@ website:
             href: blog/es/2023-06-08-inscripcion.html  
       - text: LatinR 2023
         menu: 
+          - text: "Lugar"
+            href: cronograma/lugar/index.qmd        
           - text: "Conferencistas"
             href: cronograma/conferencistas/index.qmd
           - text: "Tutoriales"
