--- a/_quarto-es.yml
+++ b/_quarto-es.yml
@@ -35,6 +35,8 @@ website:
           - text: "Conferencistas"
             href: cronograma/conferencistas/index.qmd
           - text: "Tutoriales"
-            href: cronograma/tutoriales/index.qmd            
+            href: cronograma/tutoriales/index.qmd    
+          - text: "Becas de asistencia"
+            href: blog/es/2023-08-18-becas-2023.html               
       - text: "Novedades"
         href: blog/es/index.html          
