--- a/.github/workflows/update-data-from-sheets.yaml
+++ b/.github/workflows/update-data-from-sheets.yaml
@@ -1,5 +1,8 @@
 on:
   workflow_dispatch:
+  schedule:
+    # * is a special character in YAML so you have to quote this string
+    - cron:  '0 0 * * *'
 
 name: Update data from sheets
 
