--- a/.github/workflows/update-website.yaml
+++ b/.github/workflows/update-website.yaml
@@ -2,6 +2,9 @@ on:
   workflow_dispatch:
   push:
     branches: main
+  schedule:
+    # * is a special character in YAML so you have to quote this string
+    - cron:  '5 0 * * *'    
 
 name: Update website
 
