--- a/_quarto-en.yml
+++ b/_quarto-en.yml
@@ -32,7 +32,9 @@ website:
       - text: LatinR 2023
         menu: 
           - text: "Location"
-            href: cronograma/lugar/location.qmd            
+            href: cronograma/lugar/location.qmd  
+          - text: "Recursos turísticos"
+            href: cronograma/recursos-turisticos/index-en.qmd                         
           - text: "Keynote Speakers"
             href: cronograma/conferencistas/keynotes.qmd    
           - text: "Workshops"
