--- a/_quarto-es.yml
+++ b/_quarto-es.yml
@@ -32,7 +32,9 @@ website:
       - text: LatinR 2023
         menu: 
           - text: "Lugar"
-            href: cronograma/lugar/index.qmd        
+            href: cronograma/lugar/index.qmd 
+          - text: "Recursos turísticos"
+            href: cronograma/recursos-turisticos/index.qmd             
           - text: "Conferencistas"
             href: cronograma/conferencistas/index.qmd
           - text: "Tutoriales"
