--- a/.github/workflows/update-website.yaml
+++ b/.github/workflows/update-website.yaml
@@ -45,6 +45,7 @@ jobs:
             any::readr
             any::googlesheets4
             any::usethis          
+            any::toastui
 
       - name: Execute Script
         run: |
