--- a/.github/workflows/update-website.yaml
+++ b/.github/workflows/update-website.yaml
@@ -46,6 +46,7 @@ jobs:
             any::googlesheets4
             any::usethis          
             any::toastui
+            any::reactable
 
       - name: Execute Script
         run: |
