--- a/_quarto-en.yml
+++ b/_quarto-en.yml
@@ -35,6 +35,8 @@ website:
             href: cronograma/lugar/location.qmd            
           - text: "Tourist resources"
             href: cronograma/recursos-turisticos/index-en.qmd
+          - text: "Program"
+            href: cronograma/programa/preliminar.qmd                
           - text: "Keynote Speakers"
             href: cronograma/conferencistas/keynotes.qmd    
           - text: "Workshops"
