--- a/_quarto-es.yml
+++ b/_quarto-es.yml
@@ -34,7 +34,9 @@ website:
           - text: "Lugar"
             href: cronograma/lugar/index.qmd 
           - text: "Recursos turísticos"
-            href: cronograma/recursos-turisticos/index.qmd             
+            href: cronograma/recursos-turisticos/index.qmd  
+          - text: "Programa"
+            href: cronograma/programa/preliminar.qmd       
           - text: "Conferencistas"
             href: cronograma/conferencistas/index.qmd
           - text: "Tutoriales"
