--- a/_quarto-es.yml
+++ b/_quarto-es.yml
@@ -41,8 +41,8 @@ website:
             href: cronograma/conferencistas/index.qmd
           - text: "Tutoriales"
             href: cronograma/tutoriales/index.qmd
-          - text: "Programa"
-            href: cronograma/programa/index.qmd
+          # - text: "Programa"
+          #   href: cronograma/programa/index.qmd
           - text: "Becas de asistencia"
             href: blog/es/2023-08-18-becas-2023.html               
       - text: "Novedades"
