--- a/_quarto-es.yml
+++ b/_quarto-es.yml
@@ -35,15 +35,19 @@ website:
             href: cronograma/lugar/index.qmd 
           - text: "Recursos turísticos"
             href: cronograma/recursos-turisticos/index.qmd  
-          - text: "Programa"
-            href: cronograma/programa/preliminar.qmd       
-          - text: "Conferencistas"
-            href: cronograma/conferencistas/index.qmd
-          - text: "Tutoriales"
-            href: cronograma/tutoriales/index.qmd
-          # - text: "Programa"
-          #   href: cronograma/programa/index.qmd
           - text: "Becas de asistencia"
-            href: blog/es/2023-08-18-becas-2023.html               
+            href: blog/es/2023-08-18-becas-2023.html    
+      - text: Programa
+        menu: 
+          - text: "Programa resumido"
+            href: cronograma/programa/preliminar.qmd 
+          - text: "Conferencistas"
+            href: cronograma/conferencistas/index.qmd    
+          - text: "Tutoriales"
+            href: cronograma/tutoriales/index.qmd                 
+          - text: "Presentaciones"
+            href: cronograma/programa/presentaciones.qmd 
+          - text: "Posters"
+            href: cronograma/programa/posters.qmd              
       - text: "Novedades"
         href: blog/es/index.html          
