--- a/_quarto-es.yml
+++ b/_quarto-es.yml
@@ -41,6 +41,8 @@ website:
         menu: 
           - text: "Programa resumido"
             href: cronograma/programa/preliminar.qmd 
+          - text: "Calendario"
+            href: cronograma/programa/index.qmd            
           - text: "Conferencistas"
             href: cronograma/conferencistas/index.qmd    
           - text: "Tutoriales"
